# GAlileo

./: .gitattributes  .gitignore  README.md  airflow.cfg.template  cfrun.sh  create_user.py  generate_config.py  gov-au_Australiagovau_Homeaffairs-Sankey.html  manifest.yml  oecd_data_extract.json  requirements.txt
cpp2_analysis/: cpp_big.sql  cpp_domain_analysis.sql  cpp_google_sheets_format.ipynb  cpp_new_return.sql  cpp_region_analysis.sql  readme.md
dags/: bq_ingest_atlassian_stream_dag.py  ga_360_accounts.py  ga_accounts_views_index.py  ga_benchmark.py  ga_daily_reporter.py  ga_daily_reporter_test.py  ga_pgvw_dag_template.py  ga_pgvw_daily_snapshot.py  ga_pgvw_daily_snapshot_delta_doi.py  ga_pgvw_daily_snapshot_doi.py  ga_pgvw_daily_snapshot_emp.py  ga_pgvw_daily_snapshot_intraday_doi.py  ga_pgvw_montly_accumulated_snapshot_full_doi.py  ga_project_ursa_major_time_series_counter.py  ga_project_ursa_major_time_series_doi.py  ga_quarterly_reporter.py  observatory.py  web_search_reporter.py  wildebeest.py
docker/: Dockerfile  build.sh
ga4_analysis/: ga4_analysis.ipynb  ga4_event_unnest.sql  hotdog_analysis.ipynb  hotdog_extract.sql  readme.md
ga4_basecode/: traffic_referral_outbound.sql
google_searchconsole/: gsc_bq_dta_dga.py  gsc_etl_bq.py  gsc_load_bq.py  parameters_auth.py  parameters_bigquery.py  parameters_template.py
govau_site_referral/: govau_site_referral_bq_export_csv.py  govau_site_referral_feb2021_fb.sql  (+3 more)
tools/warcraider/: Cargo.toml  Dockerfile  build.sh  run.bat  run.sh  runall.bat  warcraider.yml
tools/warcraider/src/: lib.rs  main.rs
(+219 files in other folders)
