[package]
name = "warcraider"
version = "0.1.0"
authors = ["Alex Sadleir <maxious@lambdacomplex.org>"]
edition = "2018"

[dependencies]
avro-rs = "0.6.5"
failure = "0.1.5"
rust_warc = "1.0.0"
rake = "0.1.5"
libflate = "0.1.22"
soup = "0.4.1"
rayon = "1.0.3"
regex = "1.1.6"
serde = { version = "1.0", features = ["derive"] }