[package]
name = "warcraider"
version = "0.1.0"
authors = ["Alex Sadleir <maxious@lambdacomplex.org>"]
edition = "2018"

[dependencies]
avro-rs = "0.6.5"
failure = "0.1.5"
rust_warc = "1.0.0"
rake = "0.1.5"
libflate = "0.1.22"
soup = "0.4.1"
rayon = "1.0.3"
regex = "1.1.6"
reqwest = "0.9.17"
subprocess = "0.1.18"
stackdriver_logger = "0.5.0"
log = "0.4.6"
lazy_static = "1.3.0"
git-version = "0.3.1"
crossbeam = "0.7.1"